[package]
name = "kywy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embedded Cortex-M specific dependencies
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

# Debugging and logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Embassy framework (async embedded)
embassy-executor = { version = "0.6", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.2", features = ["defmt", "time-driver"] }
embedded-hal = "1.0.0"

# Display and bit manipulation
bitvec = { version = "1.0", default-features = false }
embedded-graphics = "0.8.1"

# Usb Serial interface for debugging
embassy-sync = { version = "0.5", features = ["defmt"] }
embassy-usb = { version = "0.4.0", default-features = false, features = [
    "defmt",
] }
static_cell = "1.2.0"
log = "0.4"
embassy-usb-logger = "0.4.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"   # Optimize for size
