[package]
name = "kywy"
version = "0.1.0"
edition = "2024"

[dependencies]
# Embedded Cortex-M specific dependencies
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

# Debugging and logging
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Embassy framework (async embedded)
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", features = [
    "defmt",
    "time-driver",
    "rp2040",
] }
embedded-hal = "1.0.0"
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", features = [
    "defmt",
] }

# Display and bit manipulation
bitvec = { version = "1.0", default-features = false }
embedded-graphics = "0.8.1"

# Usb Serial interface for debugging
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", features = [
    "defmt",
] }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "3bc809e", default-features = false, features = [
    "defmt",
] }
static_cell = "1.2.0"
log = "0.4"
embassy-usb-logger = "0.4.0"

# Example dependencies
tinybmp = "0.6.0"
embedded-menu = "0.6.1"
embedded-graphics-core = "0.4.0"
heapless = "0.7"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
itoa = "1.0.15"
micromath = "2.1.0"
embedded-iconoir = { version = "0.2.3", features = ["16px"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"   # Optimize for size

[features]
button-async = []
button-poll = []

default = ["button-async"]
