# SPDX-FileCopyrightText: 2023-2025 KOINSLOT Inc.
# SPDX-License-Identifier: GPL-3.0-or-later


[package]
name = "kywy"
version = "0.2.0"
edition = "2024"
authors = ["Koinslot_INC"]
description = "Kywy is a simple and easy-to-use library for building games on the Kywy Device"
license = "GNU General Public License v3.0"
repository = "https://github.com/orgs/KOINSLOT-Inc"
homepage = "https://kywy.io"
keywords = ["embedded", "game", "graphics", "cortex-m", "riscv", "sharp-memory-display", "game-console"]
categories = ["embedded", "game", "graphics"]

[dependencies]
# Embedded Cortex-M specific dependencies
cortex-m = { version = "0.7.6", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"

# Debugging and logging
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }

# Embassy framework (async embedded)
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.4.0",  features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4.0", features = [
    "defmt",
    "time-driver",
    "rp2040",
] }
embedded-hal = "1.0.0"
embassy-futures = { version = "0.1.0", features = [
    "defmt",
] }
embassy-embedded-hal = { version = "0.3.0", features = [
    "defmt",
    "time",
] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = "0.3.0"
inverted-pin = "1.0.0"

# Display and bit manipulation
bitvec = { version = "1.0", default-features = false }
embedded-graphics = "0.8.1"

# Usb Serial interface for debugging
embassy-sync = { version = "0.6.0", features = [
    "defmt",
] }
embassy-usb = { version = "0.4.0", default-features = false, features = [
    "defmt",
] }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
static_cell = { version = "2.1.0" }
log = "0.4"
embassy-usb-logger = "0.4.0"

# Example dependencies
tinybmp = "0.6.0"
embedded-menu = "0.6.1"
embedded-graphics-core = "0.4.0"
heapless = "0.8"
rand = { version = "0.8", default-features = false, features = ["small_rng"] }
itoa = "1.0.15"
micromath = "2.1.0"
embedded-iconoir = { version = "0.2.3", features = ["16px"] }


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "z"   # Optimize for size

[features]
button-async = []
button-poll = []

default = ["button-async"]
